# mjperrone.github.io

./: .gitignore  .gitmodules  .pnp.cjs  DEVELOPMENT.md  README.md  _config.lous.yml  _config.yml  development.md  index.html  package.json
.github/workflows/: pages.yml  publish_pages.yml
2023/01/13/tree-climbing-equipment/: index.html
2023/01/13/tree-climbing-knots/: index.html
2023/05/03/gitignore/: index.html
2023/06/01/wait-longer/: index.html
2023/06/25/cramping-mechanism/: index.html
2023/06/25/freediving-buoy-equipment/: index.html
2023/06/25/freediving-worn-gear/: index.html
2023/08/13/hello-world/: index.html
2023/10/29/gitignore/: index.html
2023/10/29/hello-world/: index.html
2023/11/08/first-aid-kit/: index.html
about/: index.html
archives/: index.html
archives/2023/: index.html
archives/2023/01/: index.html
archives/2023/05/: index.html
archives/2023/06/: index.html
archives/2023/08/: index.html
docs/: README.md  categories.html  pelicanconf.py  pyproject.toml
docs/category/: review.html
docs/output/: archives.html  authors.html  index.html  my-first-review.html  tags.html
docs/output/author/: mike-perrone.html
docs/output/feeds/: all.atom.xml  review.atom.xml
source/_posts/: cramping-mechanism.md  first-aid-kit.md  freediving-buoy-equipment.md  freediving-worn-gear.md  gitignore.md  tree-climbing-equipment.md  tree-climbing-knots.md  wait-longer.md
source/about/: index.md
tags/freediving/: index.html
tags/social/: index.html
