[tool.poetry]
name = "pelican-blog"
version = "0.1.0"
description = ""
authors = ["Mike Perrone <mike.j.perrone@gmail.com>"]
readme = "README.md"
packages = [{include = "pelican_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
